--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+body {
+  background-color: #f5f5dc; /* beige */
+}
